<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/ic_home"
        android:title="@string/navigation_home_text" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/navigation_menu_text" />

    <item
        android:id="@+id/navigation_favoritos"
        android:icon="@drawable/ic_favorites"
        android:title="@string/navigation_favorites_text" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_user"
        android:title="@string/navigation_profile_text" />

    <item
        android:id="@+id/navigation_carrito"
        android:icon="@drawable/ic_cart"
        android:title="@string/navigation_cart_text" />

</menu>