<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Registrar">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingHorizontal="24dp"
        android:background="@drawable/sh_bg_header_police_blue"
        android:gravity="start|center"
        android:text="@string/register_header_text"
        android:textColor="@color/flesh"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="96dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/btnLogin"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_bg_btn_bright_gray"
                android:text="@string/login_button_login_text"
                android:textAllCaps="false"
                android:textColor="@color/gunmetal"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-36dp"
                android:background="@drawable/sh_bg_btn_carmine_pink"
                android:text="@string/login_button_registrar_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:translationZ="5dp"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tilFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/se_bg_edt_police_blue"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColorHint="@color/steel_teal"
                android:hint="@string/register_edt_full_name_text"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tilCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/se_bg_edt_police_blue"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:padding="16dp"
                android:textColorHint="@color/steel_teal"
                android:hint="@string/login_edt_email_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tilPasswordd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/se_bg_edt_police_blue"
                android:inputType="textPassword"
                android:maxLength="30"
                android:padding="16dp"
                android:textColorHint="@color/steel_teal"
                android:hint="@string/login_edt_passwordd_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tilConfirmPasswordd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/se_bg_edt_police_blue"
                android:inputType="textPassword"
                android:maxLength="30"
                android:padding="16dp"
                android:textColorHint="@color/steel_teal"
                android:hint="@string/register_edt_confirm_password_hint"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="30dp"
            android:background="@drawable/sh_bg_btn_gunmetal"
            android:text="@string/register_btn_register_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/carmine_pink" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Regístrate con"
                android:textColor="@color/police_blue"
                android:textStyle="bold"/>

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_gravity="end|center_vertical"
                android:background="@color/carmine_pink" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/ivFacebook"
            android:layout_width="108dp"
            android:layout_height="72dp"
            android:layout_gravity="start"
            android:background="@drawable/sh_bg_btn_flesh"
            android:contentDescription="@string/content_description"
            android:padding="16dp"
            android:src="@drawable/ic_facebook"
            app:tint="@color/gunmetal"/>

        <ImageView
            android:id="@+id/ivGooglePlus"
            android:layout_width="108dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:background="@drawable/sh_bg_btn_flesh"
            android:contentDescription="@string/content_description"
            android:padding="16dp"
            android:src="@drawable/ic_google_plus"
            app:tint="@color/carmine_pink" />

        <ImageView
            android:id="@+id/ivApple"
            android:layout_width="108dp"
            android:layout_height="72dp"
            android:layout_gravity="end|center_vertical"
            android:background="@drawable/sh_bg_btn_flesh"
            android:contentDescription="@string/content_description"
            android:padding="16dp"
            android:src="@drawable/ic_apple" />

    </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Si estas registrado?"
            android:textColor="@color/police_blue"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="Iniciar Sesion"
            android:textColor="@color/carmine_pink"
            android:textStyle="bold"/>
    </LinearLayout>


</FrameLayout>