<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Passwordd">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/sh_bg_header_police_blue"
        android:paddingHorizontal="16dp"
        android:gravity="start|center"
        android:text="Cambiar contraseña"
        android:textColor="@color/flesh"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/tilPasswordd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="170dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/se_bg_edt_police_blue"
            android:inputType="textPassword"
            android:maxLength="30"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColorHint="@color/steel_teal"
            android:hint="@string/login_edt_passwordd_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/tilConfirmPasswordd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="-96dp"
        android:layout_gravity="center"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/se_bg_edt_police_blue"
            android:inputType="textPassword"
            android:padding="16dp"
            android:maxLength="20"
            android:textColorHint="@color/steel_teal"
            android:hint="@string/register_edt_confirm_password_hint"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_gravity="center"
        android:background="@drawable/sh_bg_btn_gunmetal"
        android:text="@string/passwordd_btn_actualizar_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</FrameLayout>